crates/vexor-compiler/tests/golden/error/input/range.vx
// step goes down but end is higher
let items = [5, 4..10]
export Circle(10)
